--- a/deployment.yml
+++ b/deployment.yml
@@ -2,54 +2,18 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: jenkins
-  namespace: default
-  labels:
-    app: jenkins
 spec:
-  replicas: 3
+  replicas: 2
   selector:
     matchLabels:
       app: jenkins
   template:
     metadata:
       labels:
-        app: jenkins
-    spec:
+        app: jenkins 
+  spec:
       containers:
-      - name: jenkins
+      - name: jenkins-container
         image: robbenselvaone/project2-dev:latest
         ports:
         - containerPort: 3000
-        resources:
-          requests:
-            memory: "256Mi"
-            cpu: "250m"
-          limits:
-            memory: "512Mi"
-            cpu: "500m"
-        livenessProbe:
-          httpGet:
-            path: /health
-            port: 3000
-          initialDelaySeconds: 30
-          periodSeconds: 10
-        readinessProbe:
-          httpGet:
-            path: /ready
-            port: 3000
-          initialDelaySeconds: 15
-          periodSeconds: 5
----
-apiVersion: v1
-kind: Service
-metadata:
-  name: jenkins-service
-  namespace: default
-spec:
-  type: LoadBalancer
-  selector:
-    app: jenkins
-  ports:
-  - protocol: TCP
-    port: 80
-    targetPort: 3000
